# loadlink-app

./: .gitignore  README.md  audio-v2.html  package-lock.json  package.json  setup-python.ps1  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build.yml
design/: loadlink-v2-timeline.html
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/python/scripts/: whisper_runner.py
src-tauri/capabilities/: default.json
src-tauri/crates/audio-master/: Cargo.toml
src-tauri/crates/audio-master/src/: lib.rs
src-tauri/crates/compressor/: Cargo.toml
src-tauri/crates/compressor/src/: lib.rs
src-tauri/crates/converter/: Cargo.toml
src-tauri/crates/converter/src/: lib.rs
src-tauri/crates/core/: Cargo.toml
src-tauri/crates/core/src/: lib.rs
src-tauri/crates/importer/: Cargo.toml
src-tauri/crates/importer/src/: lib.rs
src-tauri/crates/job-manager/: Cargo.toml
src-tauri/crates/job-manager/src/: lib.rs  schema.sql
src-tauri/crates/transcriber/: Cargo.toml
src-tauri/crates/transcriber/src/: lib.rs
src-tauri/crates/workers/: Cargo.toml
src-tauri/crates/workers/src/: lib.rs
src-tauri/icons/: _README.txt  icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/v2/: audio_decode.rs  mod.rs  project_io.rs
src/audio-v2-bundle/: audio-v2.html
src/audio-v2-bundle/assets/: audioV2-2gmCdrAA.js  audioV2-BI5-ntE2.css  audioV2-C31jGaWX.js  audioV2-C3GpwMcn.css  audioV2-Ck0X2zDs.js
src/mockups/: audio-studio-mockup.html
src/v2/: global.d.ts  main.ts
src/v2/audio/: decoder.ts  engine.ts  playback.ts  waveform.ts
src/v2/persistence/: projectFile.ts  recentProjects.ts
src/v2/state/: projectStore.ts  selectionStore.ts
src/v2/types/: audio.ts  project.ts
src/v2/ui/: App.ts  Clip.ts  Header.ts  Inspector.ts  TimelineRuler.ts  Toolbar.ts  Track.ts  TrackCanvas.ts  TrackHeader.ts  TrackList.ts  Transport.ts  VideoPreview.ts  dom.ts  styles.css
