[package]
name = "loadlink-converter"
version = "0.1.0"
edition = "2021"
description = "LoadLink — Video/audio conversion and reencoding (FFmpeg)"

[dependencies]
loadlink-core = { workspace = true }
loadlink-workers = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
tauri = { version = "2.0", features = [] }
