[package]
name = "loadlink-workers"
version = "0.1.0"
edition = "2021"
description = "LoadLink — Sidecar process management (yt-dlp, ffmpeg)"

[dependencies]
loadlink-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
tauri = { version = "2.0", features = [] }
